<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:"
            android:textSize="25dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/question_text"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/true_false_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:layout_width="67dp"
            android:layout_height="69dp"
            android:backgroundTint="@color/colorButton"
            android:text="@string/true_button" />


        <Button
            android:id="@+id/false_button"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorButton"
            android:text="@string/false_button" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fill_the_blank_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/multiple_choice_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/d_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/a_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButton"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButton"
            android:src="@drawable/arrow_right" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/hint_button"
            android:layout_width="77dp"
            android:layout_height="145dp"
            android:backgroundTint="@color/colorButton"
            android:text="HELP ME " />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="103dp"
            android:layout_height="59dp"
            android:backgroundTint="@color/colorButton"
            android:text="Reset Score" />
    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        />

</LinearLayout>




